# fake_hal

./: .gitignore  Android.bp  CMakeLists.txt  Makefile  README.md  fake_camera_hal.rc  fake_camera_hal.xml
.github/workflows/: ci-tests.yml  main.yml
include/: FakeCameraDevice.h  FakeCameraProvider.h  GrallocHelper.h  GyroWarp.h  JpegEncoder.h  LensShading.h  MetadataRandomizer.h  NoiseOverlay.h  RollingShutter.h  TimestampSync.h  VideoFrameReader.h  jerror.h  jpeglib.h
include/android/hardware/camera/: CameraMetadata.h
include/android/hardware/camera/device/: ICameraDevice.h
include/android/hardware/camera/provider/: ICameraProvider.h
include/binder/: IBinder.h  Status.h
include/camera/: CameraMetadata.h
include/log/: log.h
include/system/: camera_metadata.h
ksu_module/: module.prop  service.sh
scripts/: build.sh  deploy.sh  deploy_susfs.sh  install_susfs.sh  module_structure.sh  package_module.sh  prepare_video.sh  setup_runner.sh  vbmeta_patch.sh  verify_hal.sh
sepolicy/: fake_hal.te
src/: FakeCameraDevice.cpp  FakeCameraProvider.cpp  GrallocHelper.cpp  GyroWarp.cpp  JpegEncoder.cpp  MetadataRandomizer.cpp  NoiseOverlay.cpp  TimestampSync.cpp  VideoFrameReader.cpp  main.cpp
tests/: CMakeLists.android.txt  CMakeLists.txt  hal_test_results.xml  test_gralloc_integration.cpp  test_gyro_warp.cpp  test_hal_integration.cpp  test_jpeg_encoder.cpp  test_metadata_randomizer.cpp  test_noise_overlay.cpp  test_pipeline_integration.cpp  test_results.xml  test_results_hardening.xml  test_timestamp_sync.cpp
tests/mocks/: jerror.h  jpeglib.h
tests/mocks/aidl/android/hardware/camera/common/: Status.h
tests/mocks/aidl/android/hardware/camera/device/: BnCameraDevice.h  BnCameraDeviceSession.h  CaptureRequest.h  CaptureResult.h  HalStream.h  ICameraDevice.h  ICameraDeviceCallback.h  StreamConfiguration.h  ndk_types.h
tests/mocks/aidl/android/hardware/camera/provider/: BnCameraProvider.h  ICameraProviderCallback.h
tests/mocks/aidl/android/hardware/common/fmq/: MQDescriptor.h
tests/mocks/android/: binder_manager.h  binder_process.h  hardware_buffer.h
tests/mocks/android/hardware/camera/: CameraMetadata.h
tests/mocks/camera/: CameraMetadata.h
tests/mocks/cutils/: native_handle.h
tests/mocks/hardware/: camera3.h  gralloc1.h
tests/mocks/log/: log.h
tests/mocks/media/: NdkMediaCodec.h  NdkMediaExtractor.h
tests/mocks/sys/: system_properties.h
tests/mocks/system/: camera_metadata.h  properties.h
tests/mocks/utils/: StrongPointer.h
tests/mocks/vndk/: hardware_buffer.h
vendor_overlay/etc/init/: fake_camera_hal.rc
vendor_overlay/etc/vintf/: fake_camera_hal.xml  manifest.xml
